[tool.poetry]
name = "music-lend-server"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
